# asynchrony-lib

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  asynchrony-lib.sln  azure-pipelines.yml
docs/: index.md
include/: CMakeLists.txt  simple_worker.hpp
include/siddiqsoft/: defer.hpp  periodic_worker.hpp  resource_pool.hpp  roundrobin_pool.hpp  simple_pool.hpp  simple_worker.hpp
nuget/: SiddiqSoft.asynchrony-lib.nuspec
pack/: SiddiqSoft.asynchrony.nuspec
src/: CMakeLists.txt  basic_pool.hpp  basic_worker.hpp  periodic_worker.hpp  roundrobin_pool.hpp  simple_pool.hpp  simple_worker.hpp
tests/: CMakeLists.txt  basic_pool.cpp  basic_tests.vcxproj  basic_tests.vcxproj.filters  basic_worker.cpp  ca.ruleset  defer.cpp  packages.config  periodic_worker.cpp  resource_pool.cpp  roundrobin_pool.cpp  simple_pool.cpp  simple_worker.cpp
